# Resonance-engine-python

./: .gitmodules  CMakeLists.txt  Resonance-engine-python.qbs  initCode.h  pythonEngine-test.qbs  pythonEngine-unittest.qbs  pythonEngine.qbs  pythonengine.cpp  test.cpp  unittests.cpp
test/: CMakeLists.txt  CMakeLists.txt.bak  conanfile.txt  initCode.h  pythonEngine-test.qbs  pythonEngine-unittest.qbs  test-script-engine-interface.hpp  test.cpp
